--- a/leistungen.html
+++ b/leistungen.html
@@ -77,6 +77,529 @@
 
 	<header id="header-banner-klein"></header>
 
+	<!-- === Leistungen-Seite intro bereich === -->
+
+
+	<section class="leistungen" id="leistungen1">
+		<div class="flex-container">
+			<header class="intro-container">
+				<h1>Leistung#1</h1>
+				<p>Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit,
+					sed do eiusmod tempor incididunt
+					ut labore et dolore magna
+					aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation
+					ullamco laboris nisi ut aliquip
+					ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit
+					in voluptate velit esse cillum
+					dolore eu fugiat nulla pariatur.
+					Excepteur sint occaecat cupidatat
+					non proident, sunt in culpa
+					qui officia deserunt mollit
+					anim id est laborum.</p>
+			</header>
+		</div>
+		<!-- === Flex-boxen === -->
+
+		<div class="flex-container">
+			<article class="leistungs-box">
+				<h1>Basic</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+
+			</article>
+			<article class="leistungs-box leistungs-box-empfohlen">
+				<h1>Advanced</h1>
+				<div>
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+
+			<article class="leistungs-box">
+				<h1>Professional</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+		</div>
+
+	</section>
+
+	<!-- === Leistungen-Seite intro bereich === -->
+
+
+	<section class="leistungen" id="leistungen2">
+		<div class="flex-container">
+			<header class="intro-container">
+				<h1>Leistung#2</h1>
+				<p>Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit,
+					sed do eiusmod tempor incididunt
+					ut labore et dolore magna
+					aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation
+					ullamco laboris nisi ut aliquip
+					ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit
+					in voluptate velit esse cillum
+					dolore eu fugiat nulla pariatur.
+					Excepteur sint occaecat cupidatat
+					non proident, sunt in culpa
+					qui officia deserunt mollit
+					anim id est laborum.</p>
+			</header>
+		</div>
+		<!-- === Flex-boxen === -->
+
+		<div class="flex-container">
+			<article class="leistungs-box">
+				<h1>Basic</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+
+			</article>
+			<article class="leistungs-box leistungs-box-empfohlen">
+				<h1>Advanced</h1>
+				<div>
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+
+			<article class="leistungs-box">
+				<h1>Professional</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+		</div>
+
+	</section>
+
+	<!-- === Leistungen-Seite intro bereich === -->
+
+
+	<section class="leistungen" id="leistungen3">
+		<div class="flex-container">
+			<header class="intro-container">
+				<h1>Leistung#3</h1>
+				<p>Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit,
+					sed do eiusmod tempor incididunt
+					ut labore et dolore magna
+					aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation
+					ullamco laboris nisi ut aliquip
+					ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit
+					in voluptate velit esse cillum
+					dolore eu fugiat nulla pariatur.
+					Excepteur sint occaecat cupidatat
+					non proident, sunt in culpa
+					qui officia deserunt mollit
+					anim id est laborum.</p>
+			</header>
+		</div>
+		<!-- === Flex-boxen === -->
+
+		<div class="flex-container">
+			<article class="leistungs-box">
+				<h1>Basic</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+
+			</article>
+			<article class="leistungs-box leistungs-box-empfohlen">
+				<h1>Advanced</h1>
+				<div>
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+
+			<article class="leistungs-box">
+				<h1>Professional</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+		</div>
+
+	</section>
+
+	<!-- === Leistungen-Seite intro bereich === -->
+
+
+	<section class="leistungen" id="leistungen4">
+		<div class="flex-container">
+			<header class="intro-container">
+				<h1>Leistung#4</h1>
+				<p>Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit,
+					sed do eiusmod tempor incididunt
+					ut labore et dolore magna
+					aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation
+					ullamco laboris nisi ut aliquip
+					ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit
+					in voluptate velit esse cillum
+					dolore eu fugiat nulla pariatur.
+					Excepteur sint occaecat cupidatat
+					non proident, sunt in culpa
+					qui officia deserunt mollit
+					anim id est laborum.</p>
+			</header>
+		</div>
+		<!-- === Flex-boxen === -->
+
+		<div class="flex-container">
+			<article class="leistungs-box">
+				<h1>Basic</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+
+			</article>
+			<article class="leistungs-box leistungs-box-empfohlen">
+				<h1>Advanced</h1>
+				<div>
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+
+			<article class="leistungs-box">
+				<h1>Professional</h1>
+				<div>
+
+					<p>Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit,
+						sed do eiusmod tempor incididunt
+						ut labore et dolore magna
+						aliqua. Ut enim ad minim
+						veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip
+						ex ea commodo consequat.
+						Duis aute irure dolor in
+						reprehenderit in voluptate
+						velit esse cillum dolore
+						eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa
+						qui officia deserunt mollit
+						anim id est laborum.</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+						<li>Lorem ipsum dolor sit amet</li>
+					</ul>
+				</div>
+				<button class="btn-typ-2 leistung-auswählen-btn"
+				  type="button">Auswählen</button>
+			</article>
+		</div>
+
+	</section>
 	<!-- === Footer === -->
 
 	<footer id="footer">
